tests/ui/woops.stderr
error: rustc_as_ptr must be applied to a function or method (rejected during attr parsing)
  --> $DIR/woops.rs:4:1
   |
LL | #[rustc_as_ptr]
   | ^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

